# FairSquare

./: .env.example  .gitignore  FINAL_REPORT.md  Procfile  README.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
config/: settings.py
data/outputs/: dvf_paris_osm_enriched.parquet
data/outputs/ml/: error_analysis.json  metrics.json  osm_grid_cache.json  outlier_experiment_results.json
data/processed/: dvf_paris_2023_2025_clean.parquet  dvf_paris_2023_clean_preview.csv
docker/: Dockerfile.api  Dockerfile.frontend
scripts/: advanced_outlier_experiment.py  generate_final_dataset.py  generate_pdf.py  generate_report.py  resolve_conflicts.py  run_dvf_poc.py  run_full_test.py  run_ml_pipeline.py  run_osm_poc.py  run_vision_poc.py  scrape_live_listings.py  test_ingestion.py  test_osm_features.py  train_improved_model.py  train_v3.py  train_v3_fast.py  train_v3_outlier_filter.py  train_v4_voie_recent.py  train_v5_optimized.py  vulnerability_audit.py
src/api/: main.py
src/data_ingestion/: dvf_cleaner.py  dvf_client.py
src/db/: database.py
src/features/: osm_features.py
src/frontend/: app.py  live_listings.json  live_listings_scored.json  url_analyzer.py
src/ml/: features.py  features_v2.py  tournament.py
src/recommender/: engine.py
src/utils/: logger.py
src/vision/: renovation_scorer.py
tests/integration/: test_api.py
tests/unit/: test_features.py  test_predict_router.py
(+9 files in other folders)
