[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fairsquare"
version = "0.1.0"
description = "AI-powered real-estate platform for Île-de-France — Hidden Gems detection"
requires-python = ">=3.11"

dependencies = [
    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    "geopandas>=0.14",
    "shapely>=2.0",
    "requests>=2.31",
    "httpx>=0.27",           # async HTTP (DVF, OSM)

    # Database
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",         # async PostgreSQL driver
    "alembic>=1.13",         # migrations

    # Config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",

    # ML
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "pygam>=0.9",
    "shap>=0.45",
    "joblib>=1.4",

    # Vision / LLM
    "google-genai>=1.0",         # SDK officiel Google Gemini
    "openai>=1.30",              # conservé pour compatibilité future
    "Pillow>=10.3",

    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",

    # Frontend
    "streamlit>=1.35",
    "plotly>=5.22",
    "folium>=0.16",
    "streamlit-folium>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "ipykernel>=6.29",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
